   - Added support for Pajama Sam: Games to Play on Any Day.

 General:
   - Added support for a custom SJIS font for FM-TOWNS and PC98 games.

 KYRA:
   - Added support for the Amiga version of The Legend of Kyrandia.
   - Adapted KYRA to support the custom SJIS font.

 SCUMM:
   - Added support for music and sound effects in the the Amiga version of
     The Secret of Monkey Island.

1.0.0 (2009-10-XX)
 New Ports:
   - Added MotoEZX and MotoMAGX ports.

 AGI:
   - Fixed crash on game exit.

 AGOS:
   - Fixed load/save code for PC version of Waxworks.

 CinE:
   - Fixed crashes with Future Wars and Operation Stealth demos.

 Cruise:
   - Fix freeze on game pause.

 Groovie:
   - Fixed performance on PSP.
   - Fixed crash in demo.

 Kyra:
   - Fix possible corruption of restart game save in Kyrandia 1.

 SCUMM:
   - Fixed crash on Macintosh versions of Putt-Putt Joins the Parade and Fatty
     Bear's Birthday Surprise.
   - Fixed game save in Macintosh versions of HE games.
   - Fixed default save game path in latter HE games.

 Tinsel:
   - Fixed crash in palace.


1.0.0rc1 (2009-08-31)
 New Games:
   - Added support for Discworld.
   - Added support for Discworld 2 - Missing Presumed ...!?.
   - Added support for Return to Zork.
   - Added support for Leather Goddesses of Phobos 2.
   - Added support for The Manhole.
   - Added support for Rodney's Funscreen.
   - Added support for Cruise for a Corpse.

 General:
   - Added experimental AdLib emulator from DOSBox.
   - Added quick search to Launcher.
   - Improved modern GUI theme look.
   - Added per-game GUI options.
   - Improved Mass Add dialog.

 New Ports:
   - Added GP2X Wiz port.

 AGI:
   - Increased compatibility for Sierra games.
   - Implemented all 'unknown' commands.

 Beneath a Steel Sky:
   - Changed the game speed to match the original game (previously
     it ran too fast).

 Broken Sword 1:
   - Added support for the original cutscenes.
   - Dropped support for the now obsolete MPEG2 cutscenes.